tests/spec/compile-fail/058_string_slice_field.zn
// category: compile-fail
// profile: freestanding
// purpose: StringSlice is a non-owning access value and cannot be stored in fields

module tests.fail.stringSliceField;

struct BadToken {
    text: StringSlice, // expected-error: StringSlice cannot be stored as a field; use String for owned text
}
